# Global_Alignment

./: .gitignore  CMakeLists.txt  README.md  alignment.cpp  score.cpp  substring.cpp  test.cpp
include/: alignmentIO.hpp  globalAligner.hpp  scoreCalculator.hpp  substringChecker.hpp
input/: align.txt  score.txt  substring_1.txt  substring_2.txt
src/: alignmentIO.cpp  globalAligner.cpp  scoreCalculator.cpp  substringChecker.cpp
